# airflow-etl-local

./: .pdm.toml  pyproject.toml
dags/: hello_world.py
