[project]
name = ""
version = ""
description = ""
authors = [
    {name = "daryl diningrat", email = "daryl.diningrat@kompas.com"},
]
dependencies = [
    "apache-airflow>=2.4.2",
    "pendulum>=2.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
